<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_brand"
            android:icon="@drawable/ic_brand"
            android:title="@string/brand" />
        <item
            android:id="@+id/nav_Enquiry"
            android:icon="@drawable/ic_enquiry_drawer"
            android:title="@string/enquiries" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order"
            android:title="@string/orders"/>

        <item
            android:id="@+id/nav_kra"
            android:icon="@drawable/ic_kra"
            android:title="@string/kra"/>

        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_videos"
            android:title="@string/training_videos"/>


        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_report"
            app:showAsAction = "ifRoom"
            android:orderInCategory="1"
            android:title="@string/myreport">

        </item>
    </group>

</menu>
